fix profile img

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="img/profile.ico" type="image/x-icon">
     <title>我的 Linktree</title>
 
@@ -13,8 +13,8 @@
 <body>
 
     <div id="head" align="center">
-        <a href="img/profile.jpg" target="_blank" class="profile">
-            <img src="/img/profile.jpg" alt="Profile Picture">
+        <a href="img/profile.jpg" target="_blank" >
+            <img src="/img/profile.jpg" alt="Profile Picture"class="profile">
         </a>
         <h1>crocodilehs</h1>
     </div>
