add bing image creator

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <div id="head" align="center">
         <a href="img/profile.jpg" target="_blank" >
             <img src="/img/profile.jpg" alt="Profile Picture"class="profile">
@@ -30,12 +29,10 @@
                     Disco Diffusion</a>
             </li>
             <li>
-                <a href="https://example.com" target="_blank">
+                <a href="bing.html" target="_blank">
                     <img src="/img/bing_icon.png" alt="bing icon"> Bing Image Creator</a>
             </li>
         </ul>
     </div>
-
 </body>
-
 </html>
