--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Disco Diffusion</a>
             </li>
             <li>
-                <a href="bing.html" target="_blank">
+                <a href="https://crocodilehs.github.io/bing.html" target="_blank">
                     <img src="/img/bing_icon.png" alt="bing icon"> Bing Image Creator</a>
             </li>
         </ul>
